--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringbootFinal6</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -25,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>  
+<groupId>org.springframework.boot</groupId>  
+<artifactId>spring-boot-starter-tomcat</artifactId>  
+<scope>provided</scope>  
+</dependency>  
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
