--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>SpringbootFinal6</artifactId>
 	<name>SpringbootFinal6</name>
+	
 	<description>Demo project for Spring Boot</description>
 	<packaging>war</packaging>
 	<properties>
@@ -69,7 +70,9 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+		
+ <finalName>${artifactId}</finalName>
+  </build>
 	<repositories>
 		<repository>
 			<id>spring-milestones</id>
